--- a/roles/common/tasks/system-setup.yaml
+++ b/roles/common/tasks/system-setup.yaml
@@ -1,6 +1,6 @@
 - name: Copy {{ component }} service file
-  ansible.builtin.copy:
-    src: " {{ component }}.service.j2"
+  ansible.builtin.template:
+    src: "{{ component }}.service.j2"
     dest: "/etc/systemd/system/{{ component }}.service"
   notify: daemon_reload
 
