--- a/roles/common/tasks/system-setup.yaml
+++ b/roles/common/tasks/system-setup.yaml
@@ -2,6 +2,7 @@
   ansible.builtin.template:
     src: "{{ component }}.service.j2"
     dest: "/etc/systemd/system/{{ component }}.service"
+    remote_src: yes
   notify: daemon_reload
 
 - name: start and enable  the service
