--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -1,7 +1,13 @@
-- name: start and enable  the service
-  ansible.builtin.service:
-      name: mysqld
-      state: started
-      enabled: yes
-- name: set up root password
-  ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
+
+  - name: install mysql 
+    ansible.builtin.package:
+      name: mysql-server
+      state: present
+  
+  - name: start and enable  the service
+    ansible.builtin.service:
+       name: mysqld
+       state: started
+       enabled: yes
+  - name: set up root password
+    ansible.builtin.command: mysql_secure_installation --set-root-pass RoboShop@1
